fixed intro section on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -208,6 +208,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin-right: 10%;
   margin-top: -20%;
 }
+@media (max-width:768px) {
+  .banner #intro {
+    margin-left: 35%;
+    margin-bottom: 20%;
+  }
+}
 .banner .tagline {
   font-weight: 700;
   letter-spacing: 0.8px;
